src/test/ui/const-generics/issues/issue-66205.min.stderr
error: generic parameters must not be used inside const evaluations
  --> $DIR/issue-66205.rs:8:14
   |
LL |     fact::<{ N - 1 }>();
   |              ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments `N`

error: aborting due to previous error

